filegroup(
    name = "haivivi_tests",
    srcs = glob(["haivivi/**/*.luau"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "unit_tests",
    srcs = glob(["test_*.luau"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "tool_tests",
    srcs = glob(["tool/**/*.luau"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "agent_tests",
    srcs = glob(["agent/**/*.luau"]),
    visibility = ["//visibility:public"],
)

# Test runner script
sh_binary(
    name = "run_test",
    srcs = ["run_test.sh"],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        ":haivivi_tests",
        ":unit_tests",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# Unit Tests (no network required, run by default)
# =============================================================================

sh_test(
    name = "test_builtin_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location test_builtin.luau)",
        "luau/libs",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "test_builtin.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_require_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location test_require.luau)",
        "luau/libs",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "test_require.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_json_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location test_json.luau)",
        "luau/libs",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "test_json.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_kvs_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location test_kvs.luau)",
        "luau/libs",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "test_kvs.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_env_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location test_env.luau)",
        "luau/libs",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "test_env.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_http_unit_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location test_http_unit.luau)",
        "luau/libs",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "test_http_unit.luau",
    ],
    tags = ["unit"],
)

# Rust runner unit tests
sh_test(
    name = "test_builtin_rust",
    srcs = ["run_test.sh"],
    args = [
        "$(location //rust/cmd/luau)",
        "$(location test_builtin.luau)",
        "luau/libs",
    ],
    data = [
        "//rust/cmd/luau",
        "//luau/libs:haivivi",
        "test_builtin.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_require_rust",
    srcs = ["run_test.sh"],
    args = [
        "$(location //rust/cmd/luau)",
        "$(location test_require.luau)",
        "luau/libs",
    ],
    data = [
        "//rust/cmd/luau",
        "//luau/libs:haivivi",
        "test_require.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_json_rust",
    srcs = ["run_test.sh"],
    args = [
        "$(location //rust/cmd/luau)",
        "$(location test_json.luau)",
        "luau/libs",
    ],
    data = [
        "//rust/cmd/luau",
        "//luau/libs:haivivi",
        "test_json.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_kvs_rust",
    srcs = ["run_test.sh"],
    args = [
        "$(location //rust/cmd/luau)",
        "$(location test_kvs.luau)",
        "luau/libs",
    ],
    data = [
        "//rust/cmd/luau",
        "//luau/libs:haivivi",
        "test_kvs.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_env_rust",
    srcs = ["run_test.sh"],
    args = [
        "$(location //rust/cmd/luau)",
        "$(location test_env.luau)",
        "luau/libs",
    ],
    data = [
        "//rust/cmd/luau",
        "//luau/libs:haivivi",
        "test_env.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_http_unit_rust",
    srcs = ["run_test.sh"],
    args = [
        "$(location //rust/cmd/luau)",
        "$(location test_http_unit.luau)",
        "luau/libs",
    ],
    data = [
        "//rust/cmd/luau",
        "//luau/libs:haivivi",
        "test_http_unit.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_time_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location test_time.luau)",
        "luau/libs",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "test_time.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_time_rust",
    srcs = ["run_test.sh"],
    args = [
        "$(location //rust/cmd/luau)",
        "$(location test_time.luau)",
        "luau/libs",
    ],
    data = [
        "//rust/cmd/luau",
        "//luau/libs:haivivi",
        "test_time.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_coroutine_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location test_coroutine.luau)",
        "luau/libs",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "test_coroutine.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_coroutine_rust",
    srcs = ["run_test.sh"],
    args = [
        "$(location //rust/cmd/luau)",
        "$(location test_coroutine.luau)",
        "luau/libs",
    ],
    data = [
        "//rust/cmd/luau",
        "//luau/libs:haivivi",
        "test_coroutine.luau",
    ],
    tags = ["unit"],
)

# =============================================================================
# Integration Tests (require network, manual)
# =============================================================================

# Individual test targets
sh_test(
    name = "test_auth_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location haivivi/test_auth.luau)",
        "luau/libs",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "haivivi/test_auth.luau",
    ],
    env_inherit = [
        "HAIVIVI_KEY",
        "HAIVIVI_AUTH_URL",
    ],
    tags = [
        "integration",
        "manual",
    ],
)

sh_test(
    name = "test_pal_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location haivivi/test_pal.luau)",
        "luau/libs",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "haivivi/test_pal.luau",
    ],
    env_inherit = [
        "HAIVIVI_KEY",
        "HAIVIVI_AUTH_URL",
        "HAIVIVI_PAL_URL",
    ],
    tags = [
        "integration",
        "manual",
    ],
)

sh_test(
    name = "test_aiot_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location haivivi/test_aiot.luau)",
        "luau/libs",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "haivivi/test_aiot.luau",
    ],
    env_inherit = [
        "HAIVIVI_KEY",
        "HAIVIVI_AUTH_URL",
        "HAIVIVI_AIOT_URL",
        "HAIVIVI_PROJECT_KEY",
    ],
    tags = [
        "integration",
        "manual",
    ],
)

# Rust runner tests
sh_test(
    name = "test_auth_rust",
    srcs = ["run_test.sh"],
    args = [
        "$(location //rust/cmd/luau)",
        "$(location haivivi/test_auth.luau)",
        "luau/libs",
    ],
    data = [
        "//rust/cmd/luau",
        "//luau/libs:haivivi",
        "haivivi/test_auth.luau",
    ],
    env_inherit = [
        "HAIVIVI_KEY",
        "HAIVIVI_AUTH_URL",
    ],
    tags = [
        "integration",
        "manual",
    ],
)

sh_test(
    name = "test_pal_rust",
    srcs = ["run_test.sh"],
    args = [
        "$(location //rust/cmd/luau)",
        "$(location haivivi/test_pal.luau)",
        "luau/libs",
    ],
    data = [
        "//rust/cmd/luau",
        "//luau/libs:haivivi",
        "haivivi/test_pal.luau",
    ],
    env_inherit = [
        "HAIVIVI_KEY",
        "HAIVIVI_AUTH_URL",
        "HAIVIVI_PAL_URL",
    ],
    tags = [
        "integration",
        "manual",
    ],
)

sh_test(
    name = "test_aiot_rust",
    srcs = ["run_test.sh"],
    args = [
        "$(location //rust/cmd/luau)",
        "$(location haivivi/test_aiot.luau)",
        "luau/libs",
    ],
    data = [
        "//rust/cmd/luau",
        "//luau/libs:haivivi",
        "haivivi/test_aiot.luau",
    ],
    env_inherit = [
        "HAIVIVI_KEY",
        "HAIVIVI_AUTH_URL",
        "HAIVIVI_AIOT_URL",
        "HAIVIVI_PROJECT_KEY",
    ],
    tags = [
        "integration",
        "manual",
    ],
)

# =============================================================================
# Tool Runtime Tests
# =============================================================================

sh_test(
    name = "test_tool_basic_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location tool/test_basic.luau)",
        "luau/libs",
        "tool",  # runtime mode
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "tool/test_basic.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_tool_basic_rust",
    srcs = ["run_test.sh"],
    args = [
        "$(location //rust/cmd/luau)",
        "$(location tool/test_basic.luau)",
        "luau/libs",
        "tool",  # runtime mode
    ],
    data = [
        "//rust/cmd/luau",
        "//luau/libs:haivivi",
        "tool/test_basic.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_tool_require_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location tool/test_require.luau)",
        "luau/libs",
        "tool",  # runtime mode
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "tool/test_require.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_tool_require_rust",
    srcs = ["run_test.sh"],
    args = [
        "$(location //rust/cmd/luau)",
        "$(location tool/test_require.luau)",
        "luau/libs",
        "tool",  # runtime mode
    ],
    data = [
        "//rust/cmd/luau",
        "//luau/libs:haivivi",
        "tool/test_require.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_tool_stream_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location tool/test_stream.luau)",
        "luau/libs",
        "tool",  # runtime mode
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "tool/test_stream.luau",
    ],
    tags = ["unit"],
)

# =============================================================================
# Agent Runtime Tests
# =============================================================================

sh_test(
    name = "test_agent_basic_go",
    srcs = ["run_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location agent/test_basic.luau)",
        "luau/libs",
        "agent",  # runtime mode
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "agent/test_basic.luau",
    ],
    tags = ["unit"],
)

sh_test(
    name = "test_agent_basic_rust",
    srcs = ["run_test.sh"],
    args = [
        "$(location //rust/cmd/luau)",
        "$(location agent/test_basic.luau)",
        "luau/libs",
        "agent",  # runtime mode
    ],
    data = [
        "//rust/cmd/luau",
        "//luau/libs:haivivi",
        "agent/test_basic.luau",
    ],
    tags = ["unit"],
)

# =============================================================================
# Genx Integration Tests (require API keys, manual)
# =============================================================================

sh_test(
    name = "test_generate_go",
    srcs = ["run_genx_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location //testdata/luau/runtime:generate.luau)",
        "luau/libs",
        "testdata/models",
        "$(location //luau/tests/genx:generate_input.json)",
        "tool",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "//testdata/luau/runtime:generate.luau",
        "//testdata/models",
        "//luau/tests/genx:generate_input.json",
    ],
    env_inherit = [
        "DEEPSEEK_API_KEY",
    ],
    tags = [
        "genx",
        "manual",
    ],
)

sh_test(
    name = "test_generate_stream_go",
    srcs = ["run_genx_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location //testdata/luau/runtime:generate_stream.luau)",
        "luau/libs",
        "testdata/models",
        "$(location //luau/tests/genx:generate_stream_input.json)",
        "tool",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "//testdata/luau/runtime:generate_stream.luau",
        "//testdata/models",
        "//luau/tests/genx:generate_stream_input.json",
    ],
    env_inherit = [
        "DEEPSEEK_API_KEY",
    ],
    tags = [
        "genx",
        "manual",
    ],
)

sh_test(
    name = "test_tts_go",
    srcs = ["run_genx_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location //testdata/luau/runtime:tts.luau)",
        "luau/libs",
        "testdata/models",
        "$(location //luau/tests/genx:tts_minimax_input.json)",
        "tool",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "//testdata/luau/runtime:tts.luau",
        "//testdata/models",
        "//luau/tests/genx:tts_minimax_input.json",
    ],
    env_inherit = [
        "MINIMAX_API_KEY",
        "MINIMAX_GROUP_ID",
    ],
    tags = [
        "genx",
        "manual",
    ],
)

sh_test(
    name = "test_tts_doubao_go",
    srcs = ["run_genx_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location //testdata/luau/runtime:tts.luau)",
        "luau/libs",
        "testdata/models",
        "$(location //luau/tests/genx:tts_doubao_input.json)",
        "tool",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "//testdata/luau/runtime:tts.luau",
        "//testdata/models",
        "//luau/tests/genx:tts_doubao_input.json",
    ],
    env_inherit = [
        "bytedance_speech_app_id",
        "bytedance_speech_access_token",
    ],
    tags = [
        "genx",
        "manual",
    ],
)

sh_test(
    name = "test_realtime_go",
    srcs = ["run_genx_test.sh"],
    args = [
        "$(location //go/cmd/luau)",
        "$(location //testdata/luau/runtime:realtime.luau)",
        "luau/libs",
        "testdata/models",
        "$(location //luau/tests/genx:realtime_input.json)",
        "tool",
    ],
    data = [
        "//go/cmd/luau",
        "//luau/libs:haivivi",
        "//testdata/luau/runtime:realtime.luau",
        "//testdata/models",
        "//luau/tests/genx:realtime_input.json",
    ],
    env_inherit = [
        "bytedance_speech_app_id",
        "bytedance_speech_access_token",
    ],
    tags = [
        "genx",
        "manual",
    ],
    timeout = "moderate",
)
