[package]
name = "giztoy-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Audio processing utilities for PCM data"

[dependencies]
thiserror.workspace = true
rubato.workspace = true

[build-dependencies]
cc = "1"

[dev-dependencies]
tokio-test.workspace = true
