[package]
name = "giztoy-buffer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Thread-safe streaming buffer implementations"

[features]
default = ["std"]
std = []

[dependencies]
# No external dependencies, only std

[dev-dependencies]
# Testing utilities
