load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "giztoy_chatgear",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "giztoy_chatgear",
    proc_macro_deps = [
        "@crate_index//:async-trait",
    ],
    deps = [
        "//rust/audio:giztoy_audio",
        "//rust/encoding:giztoy_encoding",
        "//rust/jsontime:giztoy_jsontime",
        "//rust/mqtt0:giztoy_mqtt0",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:thiserror",
        "@crate_index//:tokio",
        "@crate_index//:tokio-util",
        "@crate_index//:tracing",
    ],
)

rust_test(
    name = "giztoy_chatgear_test",
    crate = ":giztoy_chatgear",
    deps = [
        "@crate_index//:tokio",
    ],
)
