load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "giztoy_cli",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_name = "giztoy_cli",
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "giztoy_cli_test",
    crate = ":giztoy_cli",
    deps = all_crate_deps(normal_dev = True),
)
