load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "giztoy_cli",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "giztoy_cli",
    deps = [
        "//rust/buffer:giztoy_buffer",
        "@crate_index//:anyhow",
        "@crate_index//:dirs",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:serde_yaml",
        "@crate_index//:thiserror",
        "@crate_index//:tokio",
    ],
)

rust_test(
    name = "giztoy_cli_test",
    crate = ":giztoy_cli",
    deps = [
        "@crate_index//:tempfile",
        "@crate_index//:tokio",
    ],
)
