[package]
name = "giztoy-doubaospeech"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Doubao Speech API SDK for Rust"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
flate2 = "1.0"
http = "1.1"

[dev-dependencies]
tokio-test = { workspace = true }
tokio = { workspace = true }
