load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "embed",
    crate_name = "giztoy_embed",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    proc_macro_deps = [
        "@crate_index//:async-trait",
    ],
    deps = [
        "@crate_index//:reqwest",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:thiserror",
    ],
)

rust_test(
    name = "embed_test",
    crate = ":embed",
)
